--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
         Discover delicious recipes based on the ingredients you have at home.
         Enter an ingredient and find a variety of recipes to try out!
       </p>
-      <input type="text" id="ingredient" placeholder="Enter an ingredient" />
-      <button id="searchBtn">Search</button>
+      <div class="input-group">
+        <input type="text" id="ingredient" placeholder="Enter an ingredient" />
+        <button id="searchBtn">Search</button>
+      </div>
       <div id="recipeList" class="recipe-grid"></div>
     </div>
+    
+    <footer>
+      <p>Powered by Recipe Finder © 2024</p>
+    </footer>
+    
 
     <script src="script.js"></script>
   </body>
